# ercp_basic_example

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Embed.toml  README.md  memory.x  rust-toolchain.toml  shell.nix
.cargo/: config  config.toml
src/: lib.rs  main.rs
