[package]
name = "ercp_basic_example"
version = "0.1.0"
description = "Example ERCP firmware"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2018"

[dependencies]
cortex-m-rtic = "0.5.6"
defmt = "0.2.2"
defmt-rtt = "0.2.0"
panic-probe = "0.2.0"
stm32l4xx-hal = { version = "0.6.0", features = ["stm32l4x6", "rt" ] }

[dependencies.ercp_basic]
git = "https://github.com/ercp/ercp_basic.rs.git"
branch = "develop"
features = ["embedded"]

[features]
default = [
    "defmt-default",
    "panic-probe/print-defmt",
]

# defmt mandatory features.
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# For `cargo fix` to work.
[[bin]]
name = "ercp_basic_example"
test = false
bench = false

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
debug = true
