[package]
name = "ercp_basic_example"
version = "0.1.0-dev"
description = "Example ERCP firmware"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32l4xx-hal = { version = "0.7", features = ["stm32l476", "rt"] }
systick-monotonic = "1"

[dependencies.ercp_basic]
git = "https://github.com/ercp/ercp_basic.rs.git"
branch = "develop"
features = ["serial"]

# For `cargo fix` to work.
[lib]
test = false
bench = false

# For `cargo fix` to work.
[[bin]]
name = "ercp_basic_example"
test = false
bench = false

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
debug = true
